# RoboOs

./: CMakeLists.txt  README.md  README_ROOT.md  RoboOS.spec  build.py  requirements.txt  roboos.py
docs/: API_REFERENCE.md  ARCHITECTURE_FULL.md  BUILD_REPORT.md  COMPLETION.md  C_DRIVERS_BUILD.md  INDEX.md  PHASE_2_COMPLETION.md  SUMMARY.md
examples/: ai_robot_demo.py  language_demo.py  led_control.py  motor_control.py  robot_arena.py  robot_simulation.py
firmware/: __init__.py
firmware/ai/: engine.py
firmware/app/: motor_task.c  sensor_task.c
firmware/core/: isr_vectors.s  linker.ld  math_utils.s  scheduler.py  syscall.s
firmware/drivers/gpio/: gpio.c
firmware/drivers/memory/: memory_manager.c
firmware/drivers/spi/: spi.h
firmware/drivers/timer/: timer.c
firmware/hal/: __init__.py  manager.py  peripheral_asm.s
firmware/include/: timer.h  uart.h
firmware/kernel/: irq.c  irq.h  scheduler.h
firmware/lang/: engine.py
firmware/robot_api/: __init__.py
tests/: test_suite.py
tools/iso/: RoboOSCreator.ps1  make_iso.sh
tools/iso/os_files/: autorun.bat  main.py  roboos.py  run_os.bat
tools/iso/os_files/docs/: ARCHITECTURE.md  ARCHITECTURE_FULL.md  QUICKSTART.md  README.md
tools/iso/os_files/firmware/ai/: __init__.py
tools/iso/os_files/firmware/app/: comm_task.c  comm_task.h  led_task.c  led_task.h  main.c  motor_task.h  sensor_task.h
tools/iso/os_files/firmware/core/: boot.s  context_switch.s
tools/iso/os_files/firmware/deploy/: __init__.py  flash_tool.py
tools/iso/os_files/firmware/drivers/adc/: adc.c  adc.h
tools/iso/os_files/firmware/drivers/i2c/: i2c.c  i2c.h
tools/iso/os_files/firmware/drivers/spi/: spi.c
tools/iso/os_files/firmware/drivers/uart/: uart.c
tools/iso/os_files/firmware/hal/: c_drivers_bridge.py  hal_asm.s
tools/iso/os_files/firmware/include/: gpio.h  memory_manager.h
tools/iso/os_files/firmware/kernel/: scheduler.c
tools/iso/os_files/firmware/robot_api/: robot.py
tools/iso/os_files/firmware/simulator/: simulator.py  virtual_hw.py
tools/iso/os_files/firmware/tests/: unit_test.c
